fixed alignment

--- a/style.css
+++ b/style.css
@@ -125,6 +125,8 @@ nav>a {
 }
 
 #button-container>a {
+    display: flex;
+    /* Activate flex properties below */
     padding: 10px;
     padding-inline: 20px;
     border-radius: 30px;
@@ -633,6 +635,8 @@ nav>a {
 
     #button-container {
         flex-direction: column;
+        align-items: center;
+        /* Center buttons in column */
     }
 
     .mobile {
@@ -658,6 +662,7 @@ nav>a {
 
     #experience>p {
         font-size: 30px;
+        text-align: center;
     }
 
     #achievements {
